--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,10 +12,6 @@ h1{
 p{
     text-align: center
 }
-main-header{
-    justify-content: space-between;
-    align-items: center;
-}
 .navbar{
     background-color: hsl(276, 18%, 40%);
     display: flex;
@@ -24,12 +20,12 @@ main-header{
     padding: 10px;    
 }
 .logo{
-    height: 80px;
+    height: 100px;
 }
 .nav-menu{
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 10px;
     margin: 0;
     padding: 0;
 }
@@ -42,25 +38,11 @@ main-header{
     background-color: #f7af09;
     border-radius: 4px;
 }
-.Navbar ul{
-    list-style-type: none;
-    margin: 10;
-    padding: 0;
-    overflow: hidden;
-    background-color: hsl(276, 18%, 40%);
-    justify-content: space-between;
-}
-.Navbar li{
-    float: left;
-    justify-content: space-between;
-}
-.Navbar li a{
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-.Navbar li a:hover{
-    background-color: #f7af09;
+
+header{
+    background-image: linear-gradient(rgb(0, 0, 0.5),rgb(0, 0, 0.5),rgb(0, 0, 0.5)), url('images/background.png');
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    min-height: 100px;
 }
