--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     margin : 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -11,6 +14,35 @@ h1{
 }
 p{
     text-align: center
+}
+section{
+    margin-bottom: 100px;
+}
+#home{
+    position: relative;
+    background-image: url ("../images/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 120px;
+    color: black;
+    min-height: 80vh;
+}
+#home::before{
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    z-index: 0;
+}
+#home h1,
+#home p {
+    position: relative;
+    z-index: 1;
+    color: black;
 }
 .navbar{
     background-color: hsl(276, 18%, 40%);
@@ -38,11 +70,21 @@ p{
     background-color: #f7af09;
     border-radius: 4px;
 }
+.message-wrapper {
+    display: flex;
+    gap: 30px;
+    align-items: flex-start;
+}
 
-header{
-    background-image: linear-gradient(rgb(0, 0, 0.5),rgb(0, 0, 0.5),rgb(0, 0, 0.5)), url('images/background.png');
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    min-height: 100px;
+.form-container {
+    width: 50%;
+}
+
+.output-container {
+    width: 50%;
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    display: none; 
+    background-color: #f9f9f9;
 }
